--- a/index.html
+++ b/index.html
@@ -79,48 +79,48 @@
   </script>
 
   <!-- Lluvia de girasoles tipo Matrix con emoji -->
-  <script>
-    const canvas = document.getElementById("girasol-canvas");
-    const ctx = canvas.getContext("2d");
+<script>
+  const canvas = document.getElementById("girasol-canvas");
+  const ctx = canvas.getContext("2d");
 
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 
-    const fontSize = 28;
-    const columns = Math.floor(canvas.width / fontSize);
-    const drops = new Array(columns).fill(0);
+  const fontSize = 28;
+  const columns = Math.floor(canvas.width / fontSize);
+  const drops = new Array(columns).fill(0);
 
-    function draw() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
+  function draw() {
+    ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      ctx.font = `${fontSize}px serif`;
-      ctx.fillStyle = "rgba(255, 255, 0, 0.8)";
-      ctx.textAlign = "center";
+    ctx.font = `${fontSize}px serif`;
+    ctx.fillStyle = "rgba(255, 255, 0, 0.8)";
+    ctx.textAlign = "center";
 
-      for (let i = 0; i < drops.length; i++) {
-        const x = i * fontSize + fontSize / 2;
-        const y = drops[i] * fontSize;
+    for (let i = 0; i < drops.length; i++) {
+      const x = i * fontSize + fontSize / 2;
+      const y = Math.floor(drops[i]) * fontSize;
 
-        ctx.fillText("🌻", x, y);
+      ctx.fillText("🌻", x, y);
 
-        if (y > canvas.height && Math.random() > 0.975) {
-          drops[i] = 0;
-        }
-
-        drops[i]++;
+      if (y > canvas.height && Math.random() > 0.975) {
+        drops[i] = 0;
       }
 
-      requestAnimationFrame(draw);
+      drops[i] += 0.2; // velocidad reducida a la mitad
     }
 
-    draw();
+    requestAnimationFrame(draw);
+  }
 
-    window.addEventListener("resize", () => {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-    });
-  </script>
+  draw();
+
+  window.addEventListener("resize", () => {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+  });
+</script>
 
 <div id="boton-descarga">
   <a href="Pisuke.zip" download>
